force-app/main/default/objects/Contact/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <description>Key used for merging Contacts</description>
    <externalId>true</externalId>
    <inlineHelpText>Key used for merging Contacts</inlineHelpText>
    <label>Dedupe Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>