force-app/main/default/objects/Contact/fields/isSurvivor__c.field-meta.xml
<CustomField>
    <fullName>Is_Survivor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true to keep this Contact Record as Survivor record</inlineHelpText>
    <label>Is Survivor</label>
    <type>Checkbox</type>
</CustomField>