force-app/main/default/objects/Contact/fields/Should_Merge__c.field-meta.xml
<CustomField>
    <fullName>Should_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to True to include this record in Merge process</inlineHelpText>
    <label>Should Merge</label>
    <type>Checkbox</type>
</CustomField>